--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.14.2"
+ron = "0.8"
+serde = { version = "1", features = ["derive"] }
 
 [profile.dev.package."*"]
 opt-level = 3
