--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.14.2"
+bevy = {version = "0.14.2", features = ["bevy_state"]}
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 
