--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2021"
 
 [dependencies]
 bevy = {version = "0.14.2", features = ["bevy_state"]}
+
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
+
+rand = "0.8.5"
 
 [profile.dev.package."*"]
 opt-level = 3
