--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 bevy = {version = "0.14.2", features = ["bevy_state"]}
 
+bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }
+
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 
