--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,7 @@ serde = { version = "1", features = ["derive"] }
 
 rand = "0.8.5"
 
+reqwest = { version = "0.11", features = ["json", "blocking"]}
+
 [profile.dev.package."*"]
 opt-level = 3
