--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,9 @@ reqwest = { version = "0.11", features = ["json", "blocking"]}
 
 [profile.dev.package."*"]
 opt-level = 3
+
+[profile.dev]
+debug = true
+
+[profile.release]
+debug = true
