--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ debug = []
 sexy = []
 
 [dependencies]
-bevy = {version = "0.14.2", features = ["bevy_state"]}
+bevy = {version = "0.14.2", features = ["bevy_state", "bevy_sprite"]}
 
 bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }
 
