--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [features]
 debug = []
-sexy = []
+cinematic = []
 
 [dependencies]
 bevy = {version = "0.14.2", features = ["bevy_state", "bevy_sprite"]}
