Added csharp template

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,34 @@
 /map_builder/output
 node_modules*
 package-lock.json
+
+# Dotnet-specific ignore rules for template subdirectory
+ai/templates/**/bin/
+ai/templates/**/obj/
+ai/templates/**/*.suo
+ai/templates/**/*.user
+ai/templates/**/*.userosscache
+ai/templates/**/*.sln.docstates
+ai/templates/**/*.userprefs
+ai/templates/**/[Dd]ebug/
+ai/templates/**/[Rr]elease/
+ai/templates/**/x64/
+ai/templates/**/x86/
+ai/templates/**/bld/
+ai/templates/**/Log/
+ai/templates/**/artifacts/
+ai/templates/**/Properties/launchSettings.json
+ai/templates/**/.vscode/
+ai/templates/**/ipch/
+ai/templates/**/*.nupkg
+ai/templates/**/packages/
+ai/templates/**/publish/
+ai/templates/**/AppPackages/
+ai/templates/**/BundleArtifacts/
+ai/templates/**/Package.StoreAssociation.xml
+ai/templates/**/_UpgradeReport_Files/
+ai/templates/**/Backup*/
+ai/templates/**/UpgradeLog*.XML
+ai/templates/**/UpgradeLog*.htm
+ai/templates/**/node_modules/
+ai/templates/**/.idea/
